(library
    (name orderable_list_js)
    (flags (:standard -warn-error -a+31-39))
    (libraries
        core_kernel 
        yojson
        ppx_deriving_yojson 
        ppx_deriving_yojson.runtime 
        js_of_ocaml 
        virtual_dom
        orderable_list_abs
    )
    (preprocess (pps 
        js_of_ocaml-ppx 
        ppx_deriving.std 
        ppx_deriving 
        ppx_deriving_yojson 
        ppx_jane
    ))
)


 